# elo-pitcher-rankings

./: .gitignore  CLAUDE.md  app.py  data_fetcher.py  data_processor.py  elo_system.py  pyproject.toml  style.css
.claude/: settings.local.json
