[project]
name = "elo-pitcher-rankings"
version = "0.1.0"
description = "Crowdsourced MLB Pitcher Rankings using ELO rating system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "supabase>=2.20.0",
]

[tool.setuptools]
package-mode = false
